Version 1.14.0  (September 2022)

Upgrade Instructions

  To install updated dependencies, run:
    pip install -r requirements.txt --no-deps --upgrade --upgrade-strategy=only-if-needed
  Run: `./rebuild-all.bash` to get new ForgeFiles app available
  Run: `paster ensure_index development.ini` in Allura dir

  If switching from Python 3.6 to 3.7, you will need to make a completely new python virtual environment,
  and run `pip install ...` in it, and then use it to run Allura.

  If using docker, rebuild the allura image and restart containers.

Breaking Changes
 * [#8413] [#8390] drop support for Python 2.7 and 3.6.  Only Python 3.7 is supported in this release.
 * [#8399] In an effort to update the Docker startup steps to make them as
   easy as possible and compatible across as many OS's as possible, the default
   allura-data location has been moved from `/allura-data` to `./allura-data`.
   This will likely break existing Docker deployments. To fix your deployment,
   Either set the LOCAL_SHARED_DATA_ROOT env variable to /allura-data or change
   the value in the local `.env` file (or move your /allura-data to
   ./allura-data).
 * Remove the `force_ssl.logged_in` config option.  It is recommended to use https for
   all visitors, whether logged in or not.
 * [#8438] gravatar integration is disabled by default, for privacy reasons.  If you wish to enable it, add
   `use_gravatar = true` to your .ini file

Major New Features
 * [#8368] new Files App

Security
 * [#8414] Added a new validator to restrict private/internal ips from being submitted in import forms
 * Many package upgrades

General
 * [#8388] consolidate markdown_syntax and search_help pages
 * [#8402] Remove PreChecked Checkboxes
 * [#8424] Better Error Handling For Wiki And Discussion Pages
 * [#8404] SMTP maximum allowed line length
 * [#8430] improve SMTP retry logic
 * [#8401] Project Icon URL Param Issue
 * [#8454] Prevent Anonymous Github Imports
 * [#8403] Github Importer Enhancements