@@ -27,7 +27,6 @@ jobs:
 install:
   - sudo apt-get install -qq libjpeg8-dev zlib1g-dev
   - pip install --upgrade setuptools pip
-  - pip install nose
   - pip install -r requirements.txt --no-deps --upgrade --upgrade-strategy=only-if-needed
   - npm ci
 script:
